# duckdb-sitemap

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: bruteforce_finder.cpp  bruteforce_function.cpp  http_client.cpp  robots_parser.cpp  sitemap_extension.cpp  sitemap_function.cpp  xml_parser.cpp
src/include/: bruteforce_finder.hpp  bruteforce_function.hpp  http_client.hpp  robots_parser.hpp  sitemap_extension.hpp  sitemap_function.hpp  xml_parser.hpp
test/sql/: sitemap.test
~/.config/fish/: fish_variables
~/.config/gh/: hosts.yml
