cmake_minimum_required(VERSION 3.5)

set(TARGET_NAME sitemap)

# Dependencies via vcpkg
find_package(LibXml2 REQUIRED)
find_package(ZLIB REQUIRED)

set(EXTENSION_NAME ${TARGET_NAME}_extension)
set(LOADABLE_EXTENSION_NAME ${TARGET_NAME}_loadable_extension)

project(${TARGET_NAME})
include_directories(src/include)

set(EXTENSION_SOURCES
    src/sitemap_extension.cpp
    src/sitemap_function.cpp
    src/robots_parser.cpp
    src/xml_parser.cpp
    src/http_client.cpp
)

build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})

target_link_libraries(${EXTENSION_NAME} LibXml2::LibXml2 ZLIB::ZLIB)
target_link_libraries(${LOADABLE_EXTENSION_NAME} LibXml2::LibXml2 ZLIB::ZLIB)

install(
  TARGETS ${EXTENSION_NAME}
  EXPORT "${DUCKDB_EXPORT_SET}"
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}")
